fix: manejar StaleElementReference en EcommerceSearchRemote con safeClick robusto